TAG: qcreports_db-6-0-22-20
TAG: qcreports_db-6-0-22-19
DATE: 12/01/2022
STAFF: lec
fl2/gxd secondary triage
monthly/GXD_NotRouted.py

TAG: qcreports_db-6-0-22-18
DATE: 11/30/2022
STAFF: lec
fl2/gxd secondary triage
weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-22-17
DATE: 11/25/2022
STAFF: lec
wts2-1046/Move PWI/GO/Potential GO Reference Report to qcreports_db/pwi

TAG: qcreports_db-6-0-22-16
TAG: qcreports_db-6-0-22-15
TAG: qcreports_db-6-0-22-14
TAG: qcreports_db-6-0-22-13
TAG: qcreports_db-6-0-22-12
TAG: qcreports_db-6-0-22-11
TAG: qcreports_db-6-0-22-10
TAG: qcreports_db-6-0-22-9
DATE: 11/10/2022, 11/14/2022
STAFF: lec
wts2-888/SQA: PWI/Custom Reports/new pwi folder
wts2-1031/Divide data in nomen QC reports
modified:   mgd/HMD_SymbolDiffs.py

TAG: qcreports_db-6-0-22-8
DATE: 11/08/2022
STAFF: lec
wts2-1031/Divide data in nomen QC reports
modified:   mgd/HMD_SymbolDiffs.py

TAG: qcreports_db-6-0-22-7
DATE: 10/14/2022
STAFF: lec
wts2-1009/Additional GXD QC report for Probes
mgd/GXD_ProbeAntibody.sql
monthly/PRB_Reference.sql

TAG: qcreports_db-6-0-22-6
DATE: 10/04/2022
STAFF: lec
wts2-992/identify HT index experiments with associated PMID used by GXD in MasterBib
weekly/GXD_HTExpPubMedID.sql

TAG: qcreports_db-6-0-22-5
DATE: 09/09/2022
STAFF: lec
wts2-977/Add SynGO annotation tracking to GO stats report

TAG: qcreports_db-6-0-22-4
DATE: 09/09/2022
STAFF: lec
wts2-976/Tweaks to GO Stats report

TAG: qcreports_db-6-0-22-3
TAG: qcreports_db-6-0-22-2
TAG: qcreports_db-6-0-22-1
DATE: 08/25/2022, 08/31/2022
STAFF: lec
wts2-761/MGD db cleanup - gxd vocabs -> voc_vocab/voc_term
wts2-761/use keys for Absent/Not Applicable query

TAG: qcreports_db-6-0-21-5
TAG: qcreports_db-6-0-21-4
DATE: 07/21/2022
STAFF: sc
wts2-944 created ondemand directory
converted the WTS2-673 customSQL report to an on demand QC report:
BIB_ArticlesByYear.csh/BIB_ArticlesByYear.py

TAG: qcreports_db-6-0-21-3
TAG: qcreports_db-6-0-21-2
DATE: 07/19/2022
STAFF: sc
wts2-896/crm-306